--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h1>NoGuitar.com - сайт о музыке</h1>
                 <h3>Выбери, что тебе нужно:</h3>
                 <a href="tabs.html">Табы</a>
-                <a href="#">Как играть на гитаре</a>
-                <a href="#">Как поменять струны на гитаре</a>
+                <a target="_blank" href="https://www.youtube.com/watch?v=GjVuiUoU9bw">Как играть на гитаре</a>
+                <a target="_blank" href="https://www.youtube.com/watch?v=FfkXIItdpLQ">Как поменять струны на гитаре</a>
                 <a href="bass.html">Я басист!</a>
             </div>
         </main>
@@ -32,6 +32,9 @@
         <footer class="footer">
             <div class="footer-wrapper">
                 <div class="footer-content">
+                    &copy; 2025 NoGuitar.com <br>
+                    All rights isn't reserved <br>
+                    Created with love by NoGuitar
                     <a target="_blank" href="https://github.com/neek-empty">
                         <i class="fa-brands fa-github footer-link"></i>
                         <span>Github</span>
