--- a/bass.html
+++ b/bass.html
@@ -20,8 +20,8 @@
 				<h1>NoGuitar.com - Раздел Для Басистов</h1>
 				<h3>Выбери, что тебе нужно:</h3>
 				<a href="tabs.html">Табы</a>
-				<a href="#" title="на русском сам ищи">Как играть на басу (на английском)</a>
-				<a href="https://www.youtube.com/watch?v=7anFuDXV2j8">Как поменять струны на басу</a><br><br>
+				<a href="https://www.youtube.com/watch?v=7anFuDXV2j8" title="на русском сам ищи">Как играть на басу (на английском)</a>
+				<a href="https://www.youtube.com/watch?v=PH45Aet2PqU">Как поменять струны на басу</a><br><br>
 				<a href="index.html">Я гитарист!</a>
 			</div>
 		</main>
@@ -29,6 +29,9 @@
 		<footer class="footer">
 			<div class="footer-wrapper">
 				<div class="footer-content">
+					&copy; 2025 NoGuitar.com <br>
+					All rights isn't reserved <br>
+					Created with love by NoGuitar
 					<a target="_blank" href="https://github.com/neek-empty">
 						<i class="fa-brands fa-github footer-link"></i>
 						<span>Github</span>
