--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,9 @@
 		<footer class="footer">
 			<div class="footer-wrapper">
 				<div class="footer-content">
+					&copy; 2025 NoGuitar.com <br>
+					All rights isn't reserved <br>
+					Created with love by NoGuitar
 					<a target="_blank" href="https://github.com/neek-empty">
 						<i class="fa-brands fa-github footer-link"></i>
 						<span>Github</span>
